# spbsut-oopLabs

./: README.md
lab1/problemOne/: RNum.h
lab1/problemTwo/: Array.h
lab2/: COne.cpp  COne.h  CTwo.cpp  CTwo.h
lab3/: CThree.h  CTree.cpp
lab4/: CFour.cpp  CFour.h  COne.cpp  COne.h  CThree.cpp  CThree.h  CTwo.cpp  CTwo.h  main.cpp
lab5/: Array.cpp  DLinkedList.h
lab6/problemOne/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp
lab6/problemTwo/: CMakeLists.txt  Widget.cpp  Widget.h  main.cpp
